--- a/1.html
+++ b/1.html
@@ -3,9 +3,111 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flow</title>
+<link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     
+</head>
+<body>
+   <header>
+   <img src="imagenes/logo2.png"> 
+   <img src="imagenes/logo.png">
+ 
+    <nav>
+      <div id="botones">
+<ul>
+     <li><a href="#inicio">Home</a> </li>
+     <li><a href="#about">About</a> </li>
+     <li><a href="#product">Products</a> </li>
+     <li><a href="#services">Services</a> </li>
+     <li><a href="#contact">Contact</a></li>
+</ul>
+</div> 
+   </nav>
+
+  
+
+   </header> 
+<main>
+<section id="inicio">
+<div>
+  <h2>Sed ut perspiciatis unde omnis iste natus</h2>
+
+<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
+<a href="">Read more</a>
+</div>
+</section>
+<section id="about"> 
+</section>
+<section id="products">
+ </section>
+<section id="services">
+  </section>
+<section id="contact"></section>
+
+<div>
+
+<h2>We Help Businesses Grow and Innovate</h2>
+
+<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut</p>
+
+</div>
+
+<div>
+  <a href="">ima </a>
+</div>
+
+<div>
+  <h2>Sed ut perspiciatis</h2>
+  <h3>Nemo Enim</h3>
+  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+</div>
+
+<div>
+  <a href=""></a>
+</div>
+
+<div>
+<h2>Sed ut perspiciatis</h2>
+
+<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+
+</div>
+
+<div>
+  <h2>Ut enim ad minima veniam</h2>
+</div>
+
+<div>
+  <h2>Sit amet, consectetur, adipisci</h2>
+</div>
+
+<div><h2>Get in touch We are hiring!</h2></div>
+<div>Get in touch We are hiring!</div>
+<div><a href=""></a></div>
+<form>
+<p>Name:<input type="text" placeholder="Name"></p>
+<p>Email:<input type="text" placeholder="mail"></p>
+<p>Phone:<input type="number" placeholder="telefono"></p>
+<p>Message:<input type="text" placeholder="mensaje"></p>
+
+<input type="submit" value="Send">
+
+
+</form>
+
+</main>
+<footer>
+<p>2020 © All rights reserved.</p><img src="footer-logo" alt="">
+
+    
+</footer>
 </body>
 </html>
+
+
+
+
+
