--- a/2.html
+++ b/2.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+#botones
+{
+    color: lightseagreen;
+    background-color: rgb(206, 221, 215);
+    width: auto;
+
+}
